<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_belajar"
    android:screenOrientation="landscape"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".BelajarActivity">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/menu_penambahan"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/tambah"
                android:contentDescription="@string/penambahan" />
            <ImageButton
                android:id="@+id/menu_pengurangan"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/kurang"
                android:layout_marginLeft="30dp"
                android:contentDescription="@string/pengurangan" />
            <ImageButton
                android:id="@+id/menu_pembagian"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/bagi"
                android:layout_marginLeft="30dp"
                android:contentDescription="@string/pembagian" />
            <ImageButton
                android:id="@+id/menu_perkalian"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/kali"
                android:layout_marginLeft="30dp"
                android:contentDescription="@string/perkalian" />
        </LinearLayout>
    </HorizontalScrollView>

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/back"
        android:contentDescription="@string/back" />
</RelativeLayout>